[gd_scene load_steps=11 format=3 uid="uid://tist22v8eo4y"]

[ext_resource type="Script" path="res://Scenes/Levels/test_scene.gd" id="1_j6b02"]
[ext_resource type="PackedScene" uid="uid://biyjh8h1bnio7" path="res://Scenes/cannon.tscn" id="1_y1gwu"]
[ext_resource type="PackedScene" uid="uid://chkcbv6h34e0r" path="res://Scenes/aim_circle.tscn" id="2_x2sg8"]
[ext_resource type="PackedScene" uid="uid://6kir75oqaduq" path="res://Scenes/Levels/camera_controller.tscn" id="4_5tl4h"]
[ext_resource type="PackedScene" uid="uid://radqpacgyj3g" path="res://Scenes/clown.tscn" id="5_nh4h6"]
[ext_resource type="PackedScene" uid="uid://c67i8ld245c53" path="res://Scenes/Obsticals/Static/wall.tscn" id="6_g7abd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_10rch"]

[sub_resource type="Sky" id="Sky_xinit"]
sky_material = SubResource("ProceduralSkyMaterial_10rch")

[sub_resource type="Environment" id="Environment_nel06"]
background_mode = 2
sky = SubResource("Sky_xinit")
sky_custom_fov = 61.5
ambient_light_color = Color(0.576471, 0.321569, 0.619608, 1)
ambient_light_energy = 2.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_7y35q"]

[node name="TestScene" type="Node3D"]
script = ExtResource("1_j6b02")

[node name="Cannon" parent="." instance=ExtResource("1_y1gwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.183332, 1.09989, 9.99805)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.568605, 0.822611, 0, -0.822611, -0.568605, 0, 1.91503, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AimCircle" parent="." instance=ExtResource("2_x2sg8")]

[node name="Controllers" type="Node" parent="."]

[node name="CameraController" parent="Controllers" node_paths=PackedStringArray("camera") instance=ExtResource("4_5tl4h")]
camera = NodePath("../../Camera3D")

[node name="Camera3D" type="Camera3D" parent="."]
fov = 37.8493

[node name="Clown2" parent="." instance=ExtResource("5_nh4h6")]
transform = Transform3D(2, 0, 0, 0, -8.74227e-08, -2, 0, 2, -8.74227e-08, 3.75717, -0.0223119, -34.5626)

[node name="Clown3" parent="." instance=ExtResource("5_nh4h6")]
transform = Transform3D(4, 0, 0, 0, 3.36517, -2.16231, 0, 2.16231, 3.36517, 0, -8.31313, -18.0512)

[node name="Clown" parent="." instance=ExtResource("5_nh4h6")]
transform = Transform3D(1.11949, 1.65733, -7.24443e-08, 0, -8.74227e-08, -2, -1.65733, 1.11948, -4.89342e-08, -14.3677, -4.37487, 4.67984)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nel06")
camera_attributes = SubResource("CameraAttributesPractical_7y35q")

[node name="Wall" parent="." instance=ExtResource("6_g7abd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13)

[node name="Wall4" parent="." instance=ExtResource("6_g7abd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.9132, 0, -13)

[node name="Wall4" parent="Wall4" instance=ExtResource("6_g7abd")]
transform = Transform3D(0.544961, 0, 0.838461, 0, 1, 0, -0.838461, 0, 0.544961, 15.4398, 0.252778, -8.13406)

[node name="Wall5" parent="Wall4" instance=ExtResource("6_g7abd")]
transform = Transform3D(-0.285504, 0, 0.958377, 0, 1, 0, -0.958377, 0, -0.285504, 18.0897, 0.252778, -25.9249)

[node name="Wall2" parent="." instance=ExtResource("6_g7abd")]
transform = Transform3D(0.802068, 0.189792, -0.566274, 0.597233, -0.254885, 0.760491, 0, -0.948163, -0.317785, 0, 0, -13)

[node name="Wall3" parent="." instance=ExtResource("6_g7abd")]
transform = Transform3D(0.886414, -0.147101, 0.438899, -0.462894, -0.281689, 0.840465, 0, -0.948163, -0.317785, 0, 0, -13)

[connection signal="on_fire" from="Cannon" to="." method="_on_cannon_on_fire"]
